WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 152035
FTL B3 should have basic GetById support
https://bugs.webkit.org/show_bug.cgi?id=152035
Summary
FTL B3 should have basic GetById support
Filip Pizlo
Reported
2015-12-08 20:34:37 PST
Patch forthcoming.
Attachments
work in progress
(4.91 KB, patch)
2015-12-08 20:39 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(15.39 KB, patch)
2015-12-08 22:13 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
for real this time
(14.81 KB, patch)
2015-12-08 22:20 PST
,
Filip Pizlo
saam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-12-08 20:39:13 PST
Created
attachment 266964
[details]
work in progress
Filip Pizlo
Comment 2
2015-12-08 22:13:17 PST
Created
attachment 266967
[details]
the patch
WebKit Commit Bot
Comment 3
2015-12-08 22:14:33 PST
Attachment 266967
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:6737: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:6749: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:6767: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 3 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 4
2015-12-08 22:20:28 PST
Created
attachment 266969
[details]
for real this time
WebKit Commit Bot
Comment 5
2015-12-08 22:23:07 PST
Attachment 266969
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:6737: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:6749: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:6767: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 3 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 6
2015-12-08 22:44:03 PST
Comment on
attachment 266969
[details]
for real this time View in context:
https://bugs.webkit.org/attachment.cgi?id=266969&action=review
r=me
> Source/WTF/wtf/Box.h:59 > + struct Data : ThreadSafeRefCounted<Data> {
shouldn't this be WTF_MAKE_FAST_ALLOCATED?
Filip Pizlo
Comment 7
2015-12-09 08:06:37 PST
(In reply to
comment #6
)
> Comment on
attachment 266969
[details]
> for real this time > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=266969&action=review
> > r=me > > > Source/WTF/wtf/Box.h:59 > > + struct Data : ThreadSafeRefCounted<Data> { > > shouldn't this be WTF_MAKE_FAST_ALLOCATED?
RefCounted and ThreadSafeRefCohnted both do WTF_MAKE_FAST_ALLOCATED and WTF_MAKE_NONCOPYABLE for you.
Saam Barati
Comment 8
2015-12-09 13:23:14 PST
(In reply to
comment #7
)
> (In reply to
comment #6
) > > Comment on
attachment 266969
[details]
> > for real this time > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=266969&action=review
> > > > r=me > > > > > Source/WTF/wtf/Box.h:59 > > > + struct Data : ThreadSafeRefCounted<Data> { > > > > shouldn't this be WTF_MAKE_FAST_ALLOCATED? > > RefCounted and ThreadSafeRefCohnted both do WTF_MAKE_FAST_ALLOCATED and > WTF_MAKE_NONCOPYABLE for you.
Oh, cool. I didn't know that.
Filip Pizlo
Comment 9
2015-12-09 19:50:45 PST
Landed in
http://trac.webkit.org/changeset/193890
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug